--- a/views/common/layout.jade
+++ b/views/common/layout.jade
@@ -95,9 +95,9 @@ html
     block other-content
 
     div.footer
-      div.ui.divider
-      div.ui.divided.horizontal.footer.link.list
-        div.item !{lang.copyright}
+      .ui.divider
+      .ui.copyright !{lang.copyright}
+      .ui.divided.horizontal.link.list
         a.item(href=base.rooturl + '/page/privacypolicy') #{lang.title.page.privacypolicy}
         a.item(href=base.rooturl + '/page/about') #{lang.title.page.about}
         a.item(href=base.rooturl + '/page/thanks') #{lang.title.page.thanks}
