--- a/public/static/css/all.css
+++ b/public/static/css/all.css
@@ -498,10 +498,12 @@ body.guide .main.container > * {
   margin: 1em 0em 1.5em;
   padding: 0px;
 }
-#example .footer.link.list {
-  display: block;
+#example .footer {
   text-align: center;
   margin-bottom: 1.5rem;
+}
+#example .footer .copyright {
+  color: rgba(0,0,0,.3);
 }
 
 
@@ -1393,6 +1395,19 @@ body.progress .ui.progress .bar {
   #example > .tab.segment .vertical.menu {
     display: block;
   }
+
+  #example > .main.container {
+    margin: 0 5px;
+  }
+
+  p:first-child {
+    margin-top: 0;
+  }
+
+  p {
+    margin: 5px 0;
+  }
+
 }
 @media only screen and (max-width : 450px) {
   #example .main.menu .icon.item {
@@ -1684,18 +1699,6 @@ hr {
 }
 #topic_wrapper .reply-content {
   padding: 0 20px 0 20px;
-}
-
-.content+.topic-info {
-  margin-top: 1rem;
-}
-
-.topic-info span {
-  font-size: 1rem;
-}
-
-.introduction .topic-info span {
-  color: rgba(0,0,0,.4);
 }
 
 #attachment_list {
