--- a/public/static/css/global.css
+++ b/public/static/css/global.css
@@ -34,10 +34,11 @@ body > .navbar .brand:hover {
 .footer {
   text-align: center;
   padding: 30px 0;
-  margin-top: 70px;
+  /* margin-top: 70px; */
   background: #e1e3e5 url(/static/img/footer_texture.png) 0 0;
   color: #888f96;
   box-shadow: inset 0 1px 3px 0 rgba(0, 0, 0, .2);
+  margin: 70px auto 0 auto;
 }
 
 .footer p {
