--- a/public/static/css/semantic-theme.css
+++ b/public/static/css/semantic-theme.css
@@ -485,10 +485,12 @@ body.guide .main.container > * {
   margin: 1em 0em 1.5em;
   padding: 0px;
 }
-#example .footer.link.list {
-  display: block;
+#example .footer {
   text-align: center;
   margin-bottom: 1.5rem;
+}
+#example .footer .copyright {
+  color: rgba(0,0,0,.3);
 }
 
 
@@ -1380,6 +1382,19 @@ body.progress .ui.progress .bar {
   #example > .tab.segment .vertical.menu {
     display: block;
   }
+
+  #example > .main.container {
+    margin: 0 5px;
+  }
+
+  p:first-child {
+    margin-top: 0;
+  }
+
+  p {
+    margin: 5px 0;
+  }
+
 }
 @media only screen and (max-width : 450px) {
   #example .main.menu .icon.item {
