--- a/views/user/notification.jade
+++ b/views/user/notification.jade
@@ -36,7 +36,7 @@ block content
                 |  #{lang.user.reply2_you}
               when 'at'
                 |  #{lang.user.at_you}
-          p
+          p.topic-info
             span.time 
               | #{lang.info.create_at}: #{notification.friendly_create_at}
     else
