add topic set top
Signed-off-by: tengattack <tengattack@foxmail.com>

--- a/views/index/index.jade
+++ b/views/index/index.jade
@@ -23,7 +23,7 @@ block script
         transition: 'random',
         title: '校园风景',
         lightbox: 0,
-        url: '#{base.rooturl}/news',
+        url: '#{base.nullurl}',
         description: ''
       }
     ];
