update mobile ui remove reply(2) message when have at
Signed-off-by: tengattack <tengattack@foxmail.com>

--- a/public/static/css/topic.css
+++ b/public/static/css/topic.css
@@ -104,27 +104,31 @@
 
 @media only screen and (max-width : 600px) {
   #topic_list .item, #notification_list .item {
-    padding: 5px 0 5px 5px;
+    padding: 8px 0 8px 8px;
   }
   #topic_list img.avatar, #notification_list img.avatar {
-    width: 42px;
-    height: 42px;
+    width: 46px;
+    height: 46px;
   }
   #topic_list .header, #notification_list .header {
-    font-size: 1.0em;
+    font-size: 1.1em;
+    margin-top: 1px;
+  }
+  #topic_list .topic-info, #notification_list .topic-info {
+    margin-bottom: 1px;
   }
   #topic_list .content {
-    margin-left: 47px;
+    margin-left: 54px;
   }
   #reply_list .reply {
-    padding: 5px;
-    margin: 5px 0;
+    padding: 8px;
+    margin: 8px 0;
   }
   #reply_list .reply:first-child {
     margin-top: 0;
   }
   #reply_list .reply-content *:last-child {
-    margin-bottom: 5px;
+    margin-bottom: 8px;
   }
 }
 
