fixbugs & update ui
Signed-off-by: tengattack <tengattack@foxmail.com>

--- a/views/common/layout.jade
+++ b/views/common/layout.jade
@@ -18,8 +18,9 @@ html
     link(rel='stylesheet', href='/static/css/font-OpenSans.css')
     block stylesheet
 
-    //if lt IE 9
-      script(src=base.rooturl + '/static/js/html5shiv.js')
+    <!--[if lt IE 9]>
+    script(src=base.rooturl + '/static/js/html5shiv.js')
+    <![endif]-->
 
   body#example
     block bg-content
