--- a/views/page/privacypolicy.jade
+++ b/views/page/privacypolicy.jade
@@ -17,7 +17,7 @@ block pagecontent
       | 同时，本网站使用了目前流行且安全的密码加盐取哈希值的密码储存方式，这样能确保如果网站服务器被攻破，入侵者也无法还原您的原始密码。
 
     h3 登录
-    p 本网站目前仍没有可信任机构颁发的SSL证书，故无法给您提供安全连接，如果您要登录网站请确保您位于安全的网络环境下。
+    p 本网站目前使用的是Thawte DV SSL CA颁发的SSL证书，为您提供整站的安全连接，以防止被第三方窃取到您的操作记录。
       br
       | 另外，出于安全考虑，本网站最长的在线状态时间为一个月。
 
