--- a/views/board/showtopics.jade
+++ b/views/board/showtopics.jade
@@ -6,6 +6,7 @@ block stylesheet
   link(rel='stylesheet', href=base.rooturl + '/static/css/treeview.css?v=#{version.css}')
 
 block script
+  script(type='text/javascript', src=base.rooturl + '/static/js/user-card.js?v=#{version.js}')
   script(type='text/javascript').
     function itemClick(e) {
       if (e && e.target) {
@@ -19,6 +20,7 @@ block script
       }
     }
     $('#topic_list .item').on('click', itemClick);
+    initUserPageCard();
   block treescript
 
 block bodyheader
@@ -76,7 +78,8 @@ block content
               a(href=base.rooturl + '/topic/#{topic._id}')= topic.title
             p.topic-info
               if (topic.author_id)
-                a(href=base.rooturl + '/topic/page/#{topic.author_id}', target='_blank')= topic.author.name
+                span.user-name
+                  a(href=base.rooturl + '/topic/page/#{topic.author_id}', target='_blank')= topic.author.name
               span.time 
                 | #{lang.info.create_at}: #{topic.friendly_create_at}
                 if (topic.last_reply)
