update urp show grades & gpa

--- a/views/user/page.jade
+++ b/views/user/page.jade
@@ -5,7 +5,7 @@ block nav-tabs
   a.item(href=base.rooturl + '/user/activity')= lang.user.activity
   a.active.item(href=base.rooturl + '/user/page')= lang.user.page
   if (page.flags == 0)
-    a.item(href=base.rooturl + '/user/urp')= lang.user.urp
+    a.item(href=base.rooturl + '/user/urp')= lang.user.grades_and_gpa
   a.item(href=base.rooturl + '/user/settings')= lang.user.settings
 
 block user-form
