--- a/views/user/activity.jade
+++ b/views/user/activity.jade
@@ -6,7 +6,7 @@ block nav-tabs
     a.active.item(href=base.rooturl + '/user/activity')= lang.user.activity
     a.item(href=base.rooturl + '/user/page')= lang.user.page
     if (page.flags == 0)
-      a.item(href=base.rooturl + '/user/urp')= lang.user.urp
+      a.item(href=base.rooturl + '/user/urp')= lang.user.grades_and_gpa
     a.item(href=base.rooturl + '/user/settings')= lang.user.settings
   else
     a.item(href=base.rooturl + '/user/#{page._id}')= lang.user.profile
