--- a/views/user/urp.jade
+++ b/views/user/urp.jade
@@ -8,6 +8,20 @@ block stylesheet
     #user_gpa_form tbody tr {
       cursor: pointer;
     }
+    #user_gpa_form tfoot {
+      display: table-footer-group;
+    }
+    @media (max-width: 979px) and (min-width: 571px) {
+      #user_gpa_form tr > *:nth-child(2) {
+        display: none;
+      }
+    }
+    @media (max-width: 571px) {
+      #user_gpa_form tr > *:nth-child(2),
+      #user_gpa_form tr > *:nth-child(3) {
+        display: none;
+      }
+    }
     .gpa_result {
       font-weight: bold;
     }
@@ -19,6 +33,7 @@ block stylesheet
     }
 
 block subscript
+  script(src=base.rooturl + '/static/js/jquery.tablesort.min.js?v=#{version.js}')
   script(src=base.rooturl + '/static/js/user-urp.js?v=#{version.js}')
   script(src=base.rooturl + '/static/js/gpa.js?v=#{version.js}')
 
@@ -80,6 +95,7 @@ block user-form
             th= lang.user.course_name
             th= lang.user.course_credit
             th= lang.user.grade
+            th= lang.user.fivelevel
         tbody
           each term in urp.terms
             each course in term.courses
@@ -94,12 +110,17 @@ block user-form
                 td= course.name
                 td= course.credit
                 td= course.grade
+                td
         tfoot.full-width
           tr
             th= lang.user.gpa
-            th(colspan='5')
+            th
+            th
+            th(colspan='3')
             th
               span.gpa_result
+            th
+              span.gpa_result.fivelevel
     else
       .ui.info.message(style='display:block')
         p= lang.user.bind_urp_first
