--- a/public/static/css/all.css
+++ b/public/static/css/all.css
@@ -2659,6 +2659,129 @@ div.sidetip p.isaok {
   width: 100%;
 }
 
+/*
+ * User Activity Stylesheet
+ */
+
+.posts-list {
+  list-style-type: none;
+  padding-left: 0;
+}
+
+.posts-list .posts-list-item {
+    width: 100%;
+    margin-bottom: 0;
+}
+
+.posts-list .posts-list-item .user-img {
+    border-radius: 50%;
+    width: 28px;
+    height: 28px;
+    line-height: 28px;
+    font-size: 1.5rem;
+    position: absolute;
+    top: 50%;
+    margin-top: -14px;
+    margin-left: -14px;
+    overflow: hidden;
+}
+
+.posts-list .posts-list-item .user-icon {
+    display: inline-block;
+    text-align: center;
+    color: #eee;
+    font-weight: normal;
+}
+
+.posts-list .posts-list-item .user-icon img {
+  width: 100%;
+}
+
+.posts-list .posts-list-item .post-body {
+    position: relative;
+    border-right: 2px solid #337ab7;
+    min-height: 100px;
+}
+
+.posts-list .posts-list-item .topic-title {
+    color: #333;
+    font-weight: 900;
+    font-size: 125%;
+    text-decoration: underline;
+}
+
+.posts-list .posts-list-item .post-content {
+    max-height: 240px;
+    position: relative;
+    clear: left;
+    display: block;
+    overflow: hidden;
+    padding-right: 10px;
+    margin-top: 5px;
+    clear: both;
+}
+
+.posts-list .posts-list-item .post-content {
+  margin-left: 11px;
+}
+
+.posts-list .posts-list-item .post-content p {
+    margin: 0 0 2px;
+}
+
+.posts-list .posts-list-item .post-content img {
+  max-width: 100%;
+}
+
+.posts-list .posts-list-item .post-info {
+    position: absolute;
+    top: 50%;
+    left: 100%;
+    width: 175px;
+    height: 28px;
+    margin-top: -14px;
+    font-size: 10px;
+}
+
+.posts-list .posts-list-item .post-info .post-author {
+    padding-left: 25px;
+    color: #a6a6a6;
+    text-transform: uppercase;
+}
+
+.posts-list .posts-list-item .topic-category {
+    text-transform: uppercase;
+    font-size: 10px;
+    color: #a6a6a6;
+    margin-top: 6px;
+    margin-right: 10px;
+    margin-bottom: 25px;
+    display: inline-block;
+    margin-top: 10px;
+}
+
+.posts-list .posts-list-item .topic-category a {
+    font-weight: 900;
+    color: #777;
+}
+
+.col-post {
+  float: left;
+  width: 75%;
+}
+
+@media (min-width: 1200px) {
+  .col-post {
+    width: 91.66666667%;
+  }
+}
+
+@media (min-width: 768px) {
+  .col-post {
+    width: 83.33333333%;
+  }
+}
+
 blockquote {
   padding: 0 0 0 15px;
   margin: 0 0 20px;
