--- a/public/static/css/topic.css
+++ b/public/static/css/topic.css
@@ -102,6 +102,10 @@
   max-width: 16px;
 }
 
+.reply-content p {
+  word-break: break-word;
+}
+
 @media only screen and (max-width : 600px) {
   #topic_list .item, #notification_list .item {
     padding: 8px 0 8px 8px;
