--- a/public/static/css/all.css
+++ b/public/static/css/all.css
@@ -2732,7 +2732,8 @@ div.sidetip p.isaok {
 
 .posts-list .posts-list-item .post-content code,
 .posts-list .posts-list-item .post-content pre {
-    font-size: 14px;
+  line-height: 14px;
+  margin-bottom: 0;
 }
 
 .posts-list .posts-list-item .post-content img {
