fix bugs for user cover

--- a/public/static/css/user.css
+++ b/public/static/css/user.css
@@ -294,6 +294,7 @@
     overflow: hidden;
     width: 100%;
     max-height: 675px;
+    text-align: center;
 }
 
 .user-cover .user-front-cover img {
