--- a/public/static/css/semantic-theme.css
+++ b/public/static/css/semantic-theme.css
@@ -487,7 +487,7 @@ body.guide .main.container > * {
 }
 #example .footer {
   text-align: center;
-  /* margin-bottom: 1.5rem; */
+  margin-bottom: 1.3rem;
 }
 #example .footer .copyright {
   color: rgba(0,0,0,.3);
